@@ -4,7 +4,8 @@
 
 # Protect files and directories from prying eyes.
 <FilesMatch "\.(engine|inc|info|install|module|profile|po|sh|.*sql|theme|tpl(\.php)?|xtmpl)$|^(code-style\.pl|Entries.*|Repository|Root|Tag|Template)$">
-  Order allow,deny
+  Order deny,allow
+  Deny from all
 </FilesMatch>
 
 # Don't show directory listings for URLs which map to a directory.
