@@ -5,9 +5,9 @@ package = Date/Time
 dependencies[] = date_api
 core = 6.x
 
-; Information added by drupal.org packaging script on 2009-07-29
-version = "6.x-2.3"
+; Information added by drupal.org packaging script on 2009-09-16
+version = "6.x-2.4"
 core = "6.x"
 project = "date"
-datestamp = "1248867055"
+datestamp = "1253103320"
 
